<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the add product -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ui.AddEditSaleActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/title_product"
            style="@style/AddItemStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/add_name"
                android:hint="@string/product_name_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/add_price"
                android:hint="@string/product_price_hint"
                android:inputType="number"
                style="@style/EditorFieldStyle" />


            <!-- Quantity field -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/quantity_text_view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrease_quantity"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="decreaseInteger"
                    android:text="-" />

                <TextView
                    android:id="@+id/add_quantity"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/increase_quantity"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="increaseInteger"
                    android:text="+" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/title_supplier"
            style="@style/AddItemStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Supplier drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_supplier"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>

            <!-- Supplier phone number -->
            <EditText
                android:id="@+id/add_supplier_phone"
                android:hint="@string/supplier_phone_hint"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
